import asyncio
import hashlib
import time
from asyncio import Task

from aiohttp import ClientSession, ClientTimeout

from modules.replication.application.ports.outbound.latency_recorder import (
    LatencyRecorder,
)
from modules.replication.application.ports.outbound.replication_runner import (
    ReplicationRunner,
)
from modules.replication.domain.model.execution_result import ExecutionResult
from modules.replication.domain.model.replication_command import ReplicationCommand
from modules.replication.domain.model.replication_plan import ReplicationPlan
from modules.replication.domain.model.replication_target import ReplicationTarget
from src.modules.replication.domain.completion import (
    CompletionPolicy,
    ReplicaReply,
)


class AiohttpReplicationRunner(ReplicationRunner):
    """Выполняет репликации (hedged / fixed / speculative) по плану.

    Отвечает за:
      - запуск HTTP-запросов согласно delay_ms;
      - применение политики завершения (first/quorum/majority/k-out-of-n);
      - отмену незавершённых задач;
      - запись latency победителя в MetricsRepository.

    ВАЖНО:
    - Политика завершения должна быть выбрана менеджером/планировщиком.
    - По умолчанию используется FirstValid (k=1), как в tail-latency mitigation.
    """

    def __init__(
        self,
        client: ClientSession,
        latency_recorder: LatencyRecorder,
    ):
        self.client = client
        self.latency_recorder = latency_recorder

    async def execute(
        self,
        cmd: ReplicationCommand,
        plan: ReplicationPlan,
        policy: CompletionPolicy,
        deadline_at: float,
    ) -> ExecutionResult:
        """Выполняет план репликации.

        Args:
            cmd: Данные команды репликации
            plan: План репликации
            policy:
            deadline_at:

        Returns:
            Ответ, выбранный политикой завершения.

        Raises:
            RuntimeError: Если ни одна реплика не дала валидный результат.
        """
        tasks: list[Task[ReplicaReply]] = [
            asyncio.create_task(
                self._call_one(target=t, cmd=cmd, deadline_at=deadline_at)
            )
            for t in plan.targets
        ]

        try:
            pending: set[Task[ReplicaReply]] = set(tasks)
            done: set[Task[ReplicaReply]]

            while pending:
                remaining = deadline_at - time.perf_counter()
                if remaining <= 0:
                    break

                done, pending = await asyncio.wait(
                    pending, timeout=remaining, return_when=asyncio.FIRST_COMPLETED
                )

                if not done:
                    break

                for task in done:
                    reply: ReplicaReply = await task
                    policy.push(reply)

                    if policy.is_done():
                        winner = policy.choose()

                        for p in pending:
                            p.cancel()

                        await asyncio.gather(*pending, return_exceptions=True)
                        await self.latency_recorder.record(
                            node_id=winner.node_id, latency_ms=winner.latency_ms
                        )

                        return ExecutionResult(
                            node_id=winner.node_id,
                            status=winner.status,
                            body=winner.raw_body,
                            headers={},
                            latency_ms=winner.latency_ms,
                        )

            raise RuntimeError(
                "replication: нет ответа, удовлетворяющего политике завершения"
            )
        finally:
            for t in tasks:
                if not t.done():
                    t.cancel()
            if tasks:
                await asyncio.gather(*tasks, return_exceptions=True)

    async def _call_one(
        self, *, target: ReplicationTarget, cmd: ReplicationCommand, deadline_at: float
    ) -> ReplicaReply:
        """Делает один HTTP вызов к реплике.

        Args:
            cmd: Данные команды репликации
            target: Цель вызова (узел/порт/задержка).

        Returns:
            ReplicaReply.
        """
        if target.delay_ms > 0:
            await asyncio.sleep(target.delay_ms / 1000.0)

        remaining = deadline_at - time.perf_counter()
        if remaining <= 0:
            return _get_empty_replica_reply(node_id=target.node_id, latency_ms=0.0)

        url: str = f"http://{target.host}:{target.port}{cmd.path}"
        timeout = ClientTimeout(total=remaining)

        t0: float = time.perf_counter()
        try:
            async with self.client.request(
                method=cmd.method,
                url=url,
                params=dict(cmd.query),
                headers=dict(cmd.headers),
                data=cmd.body,
                timeout=timeout,
            ) as resp:
                raw: bytes = await resp.read()
                latency_ms: float = (time.perf_counter() - t0) * 1000.0

                ok: bool = 200 <= resp.status < 300 and raw is not None
                value: str = hashlib.sha256(raw or b"").hexdigest()

                return ReplicaReply(
                    node_id=target.node_id,
                    ok=ok,
                    value=value,
                    raw_body=raw or b"",
                    status=int(resp.status),
                    latency_ms=latency_ms,
                )
        except asyncio.TimeoutError:
            return _get_empty_replica_reply(
                node_id=target.node_id, latency_ms=(time.perf_counter() - t0) * 1000.0
            )
        except asyncio.CancelledError:
            raise
        except Exception:
            return _get_empty_replica_reply(
                node_id=target.node_id,
                latency_ms=(time.perf_counter() - t0) * 1000.0,
                status=599,
            )


def _get_empty_replica_reply(
    node_id: str, latency_ms: float, status: int = 598
) -> ReplicaReply:
    return ReplicaReply(
        node_id=node_id,
        ok=False,
        value="",
        raw_body=b"",
        status=status,
        latency_ms=latency_ms,
    )
